fix: fixes overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-html, body, #root {
+html, body {
     height: 100%;
 }
 
 #root {
+    min-height: 100%;
     background-color: white;
 }
